--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,8 +10,7 @@ spring:
     user: sa
     password:
     baseline-on-migrate: true
-    validate-on-migrate: false
+    validate-on-migrate: true
     locations: classpath:db/migration
-    schemas: testdb
 server:
   port: ${PORT:8080}
