--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,14 @@
 spring:
+  profiles:
+    active: local
+server:
+  port: ${PORT:8080}
+---
+spring:
+  profiles: local
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   datasource:
     url: jdbc:h2:mem:testdb;MODE=MYSQL
     username: sa
@@ -12,5 +22,23 @@ spring:
     baseline-on-migrate: true
     validate-on-migrate: true
     locations: classpath:db/migration
-server:
-  port: ${PORT:8080}
+
+---
+spring:
+  profiles: prod
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+  datasource:
+    url: ${databaseUrl}
+    username: ${usernameDB}
+    password: ${passwordDB}
+    driverClassName: org.postgresql.Driver
+  flyway:
+    enabled: true
+    url: ${databaseUrl}
+    user: ${usernameDB}
+    password: ${passwordDB}
+    baseline-on-migrate: true
+    validate-on-migrate: true
+    locations: classpath:db/migration
